# Rocket

./: Cargo.toml
cli/: Cargo.toml  build.rs
cli/src/: main.rs  template.rs  utils.rs
cli/templates/base/: Cargo.toml  README.ignore
